Game: Implement assignment of initial leader cards